# ConsoleHelper

./: CMakeLists.txt  readme.md
Include/Console/: CInfo.h  Color.h  ConsoleController.h  RGBColor.h  Types.h
Test/: main.cpp
src/: ConsoleController.cpp
